--- a/css/dental.css
+++ b/css/dental.css
@@ -1,5 +1,5 @@
 :root{
-    --main-color: #00b8b8;
+    --main-color: #0078b8;
     --secondary-color: #333;
     --main-transition: 0.3s;
     --main-line-height: 1.6;
